# yt-excel

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/: Roadmap.md  v1.1_improvement_design.md  v1.2_improvement_design.md  youtube_master_excel_cli_design_final.md
src/yt_excel/: __init__.py  cli.py  config.py  environment.py  excel.py  logger.py  retry.py  translator.py  vtt.py  youtube.py
tests/: test_cli_duration.py  test_config.py  test_environment.py  test_excel.py  test_logger.py  test_phase7_e2e.py  test_phase7_excel_edge_cases.py  test_phase7_pipeline_errors.py  test_phase7_translation_failures.py  test_phase7_vtt_edge_cases.py  test_translator.py  test_vtt.py  test_youtube.py
tests/fixtures/: basic.vtt  html_entities.vtt  mixed_complex.vtt  multiline.vtt  non_verbal.vtt  position_cues.vtt  speaker_tags.vtt  word_timing.vtt
